Remove command fix